Making announcements bar
simple bug fix and complete announcements bar!

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clone-1</title>
+    <title>Starbucks-clone</title>
     
     <script src="https://use.fontawesome.com/d6f1227cfb.js"></script>
     <script src="https://kit.fontawesome.com/cfca9bb46f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     
 </head>
 
@@ -48,6 +49,20 @@
         </div>
 
     </header>
+    <main>
+
+        <div class="main-container">
+
+            <section class="announcements">
+                <span>
+                    Facial coverings are now optional in our stores for our fully vaccinated customers, following CDC guidance, except where local regulations require it by law. 
+                    <a href="#">Learn more</a>
+                </span>
+            </section>
+
+        </div>
+
+    </main>
 
 </body>
 
