--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
                 </span>
             </section>
 
+            <section class="rewards left-right-section">
+                <div class="text">
+                    <h1>FREE COFFEE IS A TAP AWAY</h1>
+                    <h3>Join now to start earning Rewards.*</h3>
+                    <div class="cta">Join now</div>
+                </div>
+                <div class="image">
+                    <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-71056.png" alt="">
+                </div>
+            </section>
+            <section class="chill left-right-section">
+                
+                <div class="image">
+                    <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72037.jpg" alt="">
+                </div>
+                <div class="text">
+                    <h1>DELIGHTFULLY</h1><h1> CHILL</h1>
+                    <h3>Refresh your day with the bright, tropical flavors of our Star Drink and Kiwi Starfruit Starbucks Refreshers® beverage.</h3>
+                    <div class="cta">Order iced beverage</div>
+                </div>
+            </section>
+
         </div>
 
     </main>
