--- a/index.html
+++ b/index.html
@@ -77,9 +77,50 @@
                 </div>
                 <div class="text">
                     <h1>DELIGHTFULLY</h1><h1> CHILL</h1>
-                    <h3>Refresh your day with the bright, tropical flavors of our Star Drink and Kiwi Starfruit Starbucks Refreshers® beverage.</h3>
+                    <h3>Refresh your day with the bright, tropical flavors of our Star Drink and Kiwi Starfruit Starbucks Refreshers beverage.</h3>
                     <div class="cta">Order iced beverage</div>
                 </div>
+            </section>
+            <section>
+                <div class="top-bottom-section">
+                    <div class="section-container">
+                        <div class="image">
+                            <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-70203.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h1>Order and pick up. Easy as that.</h1>
+                            <h3>Just open the app, order your favorites, and enjoy contactless pay. From there, choose whichever pickup method is best for you.</h3>
+                            <div class="cta-container"><div class="cta">See pickup options</div></div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="top-bottom-section">
+                    <div class="section-container">
+                        <div class="image">
+                            <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72045.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <h1>Floating into summer like…</h1>
+                            <h3>Keep the laid-back vibes going. Order Starbucks drinks on Uber Eats.**</h3>
+                            <div class="cta-container"><div class="cta">Order now</div></div>
+                            
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+            <section>
+                <section class="celebrating left-right-section">
+                    <div class="text">
+                        <h1>Celebrating Pride Month</h1>
+                        <h3>Join us as we celebrate the LGBTQ+ community. Read partners’ (employees) stories of connection and learn how you can be an ally.</h3>
+                        <div class="cta">Learn more</div>
+                    </div>
+                    <div class="image">
+                        <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-72046.jpg" alt="">
+                    </div>
+                </section>
             </section>
 
         </div>
