--- a/index.html
+++ b/index.html
@@ -122,10 +122,25 @@
                     </div>
                 </section>
             </section>
+            <section class="apply announcements">
+                <span>
+                    *At participating stores. Some restrictions apply. See 
+                    <a href="#">starbucks.com/rewards</a>.
+                </span>
+            </section>
+            <section class="terms announcements">
+                <span>
+                    **Menu limited.  Restricted delivery area.  Available in participating locations only.  Fees subject to change.  Prices for Starbucks® items purchased through Uber Eats may be higher than posted in stores or as marked.  See the Uber Eats app for details.
+                </span>
+            </section>
 
         </div>
 
     </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 
